fix: correct asset paths in HTML and README files
Update asset paths to use relative paths instead of absolute paths to ensure proper loading of resources. Fix typo in README image path.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Nunito:400,400i,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <div class="superinfo-bg">
@@ -55,10 +55,10 @@
         </p>
       </div>
       <div class="sobre-img">
-        <img src="/assets/sobre1.jpg" alt="Sobre 1" />
+        <img src="./assets/sobre1.jpg" alt="Sobre 1" />
       </div>
       <div class="sobre-img">
-        <img src="/assets/sobre2.jpg" alt="Sobre 2" />
+        <img src="./assets/sobre2.jpg" alt="Sobre 2" />
       </div>
     </section>
 
@@ -68,17 +68,17 @@
       <div class="produtos-container">
         <div class="produtos-item purple">
           <h2>Purple</h2>
-          <img src="/assets/produtos1.jpg" alt="Produtos 1" />
+          <img src="./assets/produtos1.jpg" alt="Produtos 1" />
         </div>
 
         <div class="produtos-item pink">
           <h2>Pink</h2>
-          <img src="/assets/produtos2.jpg" alt="Produtos 2" />
+          <img src="./assets/produtos2.jpg" alt="Produtos 2" />
         </div>
 
         <div class="produtos-item blue">
           <h2>Blue</h2>
-          <img src="/assets/produtos3.jpg" alt="Produtos 3" />
+          <img src="./assets/produtos3.jpg" alt="Produtos 3" />
         </div>
       </div>
     </section>
